removed manual where and added costume cursor attributes